# ApartmentScraper

./: .gitignore  README.md  build_email.py  pyproject.toml  scraper.py
.github/workflows/: daily.yml
